@@ -56,16 +56,18 @@ import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Frequency;
+import ome.units.quantity.Length;
+import ome.units.quantity.Power;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
+
 /**
  * ICSReader is the file format reader for ICS (Image Cytometry Standard)
  * files. More information on ICS can be found at http://libics.sourceforge.net
  *
  * TODO : remove sub-C logic once N-dimensional support is in place
  *        see http://dev.loci.wisc.edu/trac/java/ticket/398
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/ICSReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/ICSReader.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  */
@@ -559,6 +561,7 @@ public class ICSReader extends FormatReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isSingleFile(String) */
+  @Override
   public boolean isSingleFile(String id) throws FormatException, IOException {
     // check if we have a v2 ICS file - means there is no companion IDS file
     RandomAccessInputStream f = new RandomAccessInputStream(id);
@@ -568,10 +571,11 @@ public class ICSReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getDomains() */
+  @Override
   public String[] getDomains() {
     FormatTools.assertId(currentId, true, 1);
     String[] domain = new String[] {FormatTools.GRAPHICS_DOMAIN};
-    if (getChannelDimLengths().length > 1) {
+    if (getModuloC().length() > 1) {
       domain[0] = FormatTools.FLIM_DOMAIN;
     }
     else if (hasInstrumentData) {
@@ -581,29 +585,15 @@ public class ICSReader extends FormatReader {
     return domain;
   }
 
-  /* @see loci.formats.IFormatReader#getChannelDimLengths() */
-  public int[] getChannelDimLengths() {
-    FormatTools.assertId(currentId, true, 1);
-    int[] len = new int[channelLengths.size()];
-    for (int i=0; i<len.length; i++) {
-      len[i] = channelLengths.get(i).intValue();
-    }
-    return len;
-  }
-
-  /* @see loci.formats.IFormatReader#getChannelDimTypes() */
-  public String[] getChannelDimTypes() {
-    FormatTools.assertId(currentId, true, 1);
-    return channelTypes.toArray(new String[channelTypes.size()]);
-  }
-
   /* @see loci.formats.IFormatReader#isInterleaved(int) */
+  @Override
   public boolean isInterleaved(int subC) {
     FormatTools.assertId(currentId, true, 1);
     return subC == 0 && core.get(0).interleaved;
   }
 
   /* @see loci.formats.IFormatReader#fileGroupOption(String) */
+  @Override
   public int fileGroupOption(String id) throws FormatException, IOException {
     return FormatTools.MUST_GROUP;
   }
@@ -611,6 +601,7 @@ public class ICSReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -716,6 +707,7 @@ public class ICSReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean) */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
     if (versionTwo) {
@@ -726,6 +718,7 @@ public class ICSReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -749,6 +742,7 @@ public class ICSReader extends FormatReader {
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     super.initFile(id);
 
@@ -816,7 +810,7 @@ public class ICSReader extends FormatReader {
     double[] sizes = null;
 
     Double[] emWaves = null, exWaves = null;
-    Double[] stagePos = null;
+    Length[] stagePos = null;
     String imageName = null, date = null, description = null;
     Double magnification = null, lensNA = null, workingDistance = null;
     String objectiveModel = null, immersion = null, lastName = null;
@@ -834,7 +828,7 @@ public class ICSReader extends FormatReader {
     String microscopeModel = null;
     String microscopeManufacturer = null;
     String experimentType = null;
-    Double exposureTime = null;
+    Time exposureTime = null;
 
     String filterSetModel = null;
     String dichroicModel = null;
@@ -1091,10 +1085,11 @@ public class ICSReader extends FormatReader {
             }
             else if (key.equalsIgnoreCase("history stage_xyzum")) {
               String[] positions = value.split(" ");
-              stagePos = new Double[positions.length];
+              stagePos = new Length[positions.length];
               for (int n=0; n<stagePos.length; n++) {
                 try {
-                  stagePos[n] = new Double(positions[n]);
+                  final Double number = Double.valueOf(positions[n]);
+                  stagePos[n] = new Length(number, UNITS.REFERENCEFRAME);
                 }
                 catch (NumberFormatException e) {
                   LOGGER.debug("Could not parse stage position", e);
@@ -1103,21 +1098,24 @@ public class ICSReader extends FormatReader {
             }
             else if (key.equalsIgnoreCase("history stage positionx")) {
               if (stagePos == null) {
-                stagePos = new Double[3];
+                stagePos = new Length[3];
               }
-              stagePos[0] = new Double(value); //TODO doubleValue
+              final Double number = Double.valueOf(value);
+              stagePos[0] = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (key.equalsIgnoreCase("history stage positiony")) {
               if (stagePos == null) {
-                stagePos = new Double[3];
+                stagePos = new Length[3];
               }
-              stagePos[1] = new Double(value);
+              final Double number = Double.valueOf(value);
+              stagePos[1] = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (key.equalsIgnoreCase("history stage positionz")) {
               if (stagePos == null) {
-                stagePos = new Double[3];
+                stagePos = new Length[3];
               }
-              stagePos[2] = new Double(value);
+              final Double number = Double.valueOf(value);
+              stagePos[2] = new Length(number, UNITS.REFERENCEFRAME);
             }
             else if (key.equalsIgnoreCase("history other text")) {
               description = value;
@@ -1152,7 +1150,10 @@ public class ICSReader extends FormatReader {
               if (expTime.indexOf(" ") != -1) {
                 expTime = expTime.substring(0, expTime.indexOf(" "));
               }
-              exposureTime = new Double(expTime);
+              Double expDouble = new Double(expTime);
+              if (expDouble != null) {
+                exposureTime = new Time(expDouble, UNITS.S);
+              }
             }
             else if (key.equalsIgnoreCase("history filterset")) {
               filterSetModel = value;
@@ -1364,6 +1365,37 @@ public class ICSReader extends FormatReader {
     if (getSizeC() == 0) m.sizeC = 1;
     if (getSizeT() == 0) m.sizeT = 1;
 
+    // Set up ModuloC.  It appears that for ICS, different channels
+    // can have different lengths, which isn't supported by ModuloC
+    // which requires all channels have the same length.  This could
+    // be rectified by setting SizeC=1 and allowing multiple Modulo
+    // annotations per dimension, but would require a model change.
+    // Here, ModuloC is only set if all channels are of the same
+    // length and type.
+    if (channelLengths.size() > 0) {
+      int clen0 = channelLengths.get(0);
+      String ctype0 = channelTypes.get(0);
+      boolean same = true;
+
+      for (Integer len : channelLengths) {
+        if (clen0 != len) same = false;
+      }
+      for (String type : channelTypes) {
+        if (!ctype0.equals(type)) same = false;
+      }
+
+      if (same) {
+        m.moduloC.type = ctype0;
+        if (FormatTools.LIFETIME.equals(ctype0)) {
+          m.moduloC.parentType = FormatTools.SPECTRA;
+        }
+        m.moduloC.typeDescription = "TCSPC";
+        m.moduloC.start = 0;
+        m.moduloC.step = 1;
+        m.moduloC.end = clen0;
+      }
+    }
+
     m.interleaved = isRGB();
     m.indexed = false;
     m.falseColor = false;
@@ -1482,7 +1514,7 @@ public class ICSReader extends FormatReader {
           String unit = units != null && units.length > i ? units[i] : "";
           if (axis.equals("x")) {
             if (checkUnit(unit, "um", "microns", "micrometers")) {
-              PositiveFloat x = FormatTools.getPhysicalSizeX(pixelSize);
+              Length x = FormatTools.getPhysicalSizeX(pixelSize);
               if (x != null) {
                 store.setPixelsPhysicalSizeX(x, 0);
               }
@@ -1490,7 +1522,7 @@ public class ICSReader extends FormatReader {
           }
           else if (axis.equals("y")) {
             if (checkUnit(unit, "um", "microns", "micrometers")) {
-              PositiveFloat y = FormatTools.getPhysicalSizeY(pixelSize);
+              Length y = FormatTools.getPhysicalSizeY(pixelSize);
               if (y != null) {
                 store.setPixelsPhysicalSizeY(y, 0);
               }
@@ -1498,32 +1530,32 @@ public class ICSReader extends FormatReader {
           }
           else if (axis.equals("z")) {
             if (checkUnit(unit, "um", "microns", "micrometers")) {
-              PositiveFloat z = FormatTools.getPhysicalSizeZ(pixelSize);
+              Length z = FormatTools.getPhysicalSizeZ(pixelSize);
               if (z != null) {
                 store.setPixelsPhysicalSizeZ(z, 0);
               }
             }
           }
-          else if (axis.equals("t")) {
+          else if (axis.equals("t") && pixelSize != null) {
             if (checkUnit(unit, "ms")) {
-              store.setPixelsTimeIncrement(1000 * pixelSize, 0);
+              store.setPixelsTimeIncrement(new Time(1000 * pixelSize, UNITS.S), 0);
             }
-            else if (checkUnit(unit, "seconds") || checkUnit(unit, "s")) {
-              store.setPixelsTimeIncrement(pixelSize, 0);
+            else if (checkUnit(unit, "seconds") || checkUnit(unit, "s") ) {
+              store.setPixelsTimeIncrement(new Time(pixelSize, UNITS.S), 0);
             }
           }
         }
       }
       else if (sizes != null) {
         if (sizes.length > 0) {
-          PositiveFloat x = FormatTools.getPhysicalSizeX(sizes[0]);
+          Length x = FormatTools.getPhysicalSizeX(sizes[0]);
           if (x != null) {
             store.setPixelsPhysicalSizeX(x, 0);
           }
         }
         if (sizes.length > 1) {
           sizes[1] /= getSizeY();
-          PositiveFloat y = FormatTools.getPhysicalSizeY(sizes[1]);
+          Length y = FormatTools.getPhysicalSizeY(sizes[1]);
           if (y != null) {
             store.setPixelsPhysicalSizeY(y, 0);
           }
@@ -1536,8 +1568,8 @@ public class ICSReader extends FormatReader {
         for (int t=0; t<timestamps.length; t++) {
           if (t >= getSizeT()) break; // ignore superfluous timestamps
           if (timestamps[t] == null) continue; // ignore missing timestamp
-          double deltaT = timestamps[t];
-          if (Double.isNaN(deltaT)) continue; // ignore invalid timestamp
+          Time deltaT = new Time(timestamps[t], UNITS.S);
+          if (Double.isNaN(deltaT.value().doubleValue())) continue; // ignore invalid timestamp
           // assign timestamp to all relevant planes
           for (int z=0; z<getSizeZ(); z++) {
             for (int c=0; c<getEffectiveSizeC(); c++) {
@@ -1555,16 +1587,16 @@ public class ICSReader extends FormatReader {
           store.setChannelName(channelNames.get(i), 0, i);
         }
         if (pinholes.containsKey(i)) {
-          store.setChannelPinholeSize(pinholes.get(i), 0, i);
+          store.setChannelPinholeSize(new Length(pinholes.get(i), UNITS.MICROM), 0, i);
         }
         if (emWaves != null && i < emWaves.length) {
-          PositiveFloat em = FormatTools.getEmissionWavelength(emWaves[i]);
+          Length em = FormatTools.getEmissionWavelength(emWaves[i]);
           if (em != null) {
             store.setChannelEmissionWavelength(em, 0, i);
           }
         }
         if (exWaves != null && i < exWaves.length) {
-          PositiveFloat ex = FormatTools.getExcitationWavelength(exWaves[i]);
+          Length ex = FormatTools.getExcitationWavelength(exWaves[i]);
           if (ex != null) {
             store.setChannelExcitationWavelength(ex, 0, i);
           }
@@ -1578,7 +1610,7 @@ public class ICSReader extends FormatReader {
       for (int i=0; i<lasers.length; i++) {
         store.setLaserID(MetadataTools.createLSID("LightSource", 0, i), 0, i);
 
-        PositiveFloat wave =
+        Length wave =
           FormatTools.getWavelength(wavelengths.get(lasers[i]));
         if (wave != null) {
           store.setLaserWavelength(wave, 0, i);
@@ -1588,8 +1620,14 @@ public class ICSReader extends FormatReader {
 
         store.setLaserManufacturer(laserManufacturer, 0, i);
         store.setLaserModel(laserModel, 0, i);
-        store.setLaserPower(laserPower, 0, i);
-        store.setLaserRepetitionRate(laserRepetitionRate, 0, i);
+        Power theLaserPower = FormatTools.createPower(laserPower, UNITS.MW);
+        if (theLaserPower != null) {
+          store.setLaserPower(theLaserPower, 0, i);
+        }
+        Frequency theLaserRepetitionRate = FormatTools.createFrequency(laserRepetitionRate, UNITS.HZ);
+        if (theLaserRepetitionRate != null) {
+          store.setLaserRepetitionRate(theLaserRepetitionRate, 0, i);
+        }
       }
 
       if (lasers.length == 0 && laserManufacturer != null) {
@@ -1598,8 +1636,14 @@ public class ICSReader extends FormatReader {
         store.setLaserLaserMedium(getLaserMedium("Other"), 0, 0);
         store.setLaserManufacturer(laserManufacturer, 0, 0);
         store.setLaserModel(laserModel, 0, 0);
-        store.setLaserPower(laserPower, 0, 0);
-        store.setLaserRepetitionRate(laserRepetitionRate, 0, 0);
+        Power theLaserPower = FormatTools.createPower(laserPower, UNITS.MW);
+        if (theLaserPower != null) {
+          store.setLaserPower(theLaserPower, 0, 0);
+        }
+        Frequency theLaserRepetitionRate = FormatTools.createFrequency(laserRepetitionRate, UNITS.HZ);
+        if (theLaserRepetitionRate != null) {
+          store.setLaserRepetitionRate(theLaserRepetitionRate, 0, 0);
+        }
       }
 
       // populate FilterSet data
@@ -1632,7 +1676,7 @@ public class ICSReader extends FormatReader {
       store.setObjectiveImmersion(getImmersion(immersion), 0, 0);
       if (lensNA != null) store.setObjectiveLensNA(lensNA, 0, 0);
       if (workingDistance != null) {
-        store.setObjectiveWorkingDistance(workingDistance, 0, 0);
+        store.setObjectiveWorkingDistance(new Length(workingDistance, UNITS.MICROM), 0, 0);
       }
       if (magnification != null) {
         store.setObjectiveCalibratedMagnification(magnification, 0, 0);
