@@ -47,12 +47,13 @@ import ome.xml.model.enums.Immersion;
 import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Frequency;
+import ome.units.quantity.Length;
+import ome.units.quantity.Time;
+import ome.units.UNITS;
+
 /**
  * DeltavisionReader is the file format reader for Deltavision files.
- *
- * <dl><dt><b>Source code:</b></dt>
- * <dd><a href="http://trac.openmicroscopy.org.uk/ome/browser/bioformats.git/components/bio-formats/src/loci/formats/in/DeltavisionReader.java">Trac</a>,
- * <a href="http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/bio-formats/src/loci/formats/in/DeltavisionReader.java;hb=HEAD">Gitweb</a></dd></dl>
  *
  * @author Melissa Linkert melissa at glencoesoftware.com
  */
@@ -132,11 +133,13 @@ public class DeltavisionReader extends FormatReader {
   // -- IFormatReader API methods --
 
   /* @see loci.formats.IFormatReader#isSingleFile(String) */
+  @Override
   public boolean isSingleFile(String id) throws FormatException, IOException {
     return false;
   }
 
   /* @see loci.formats.IFormatReader#isThisType(String, boolean) */
+  @Override
   public boolean isThisType(String name, boolean open) {
     if (checkSuffix(name, "dv.log") || checkSuffix(name, "r3d.log") ||
       name.endsWith("_log.txt"))
@@ -148,6 +151,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#isThisType(RandomAccessInputStream) */
+  @Override
   public boolean isThisType(RandomAccessInputStream stream) throws IOException {
     final int blockLen = 98;
     if (!FormatTools.validStream(stream, blockLen, false)) return false;
@@ -157,6 +161,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#getSeriesUsedFiles(boolean) */
+  @Override
   public String[] getSeriesUsedFiles(boolean noPixels) {
     FormatTools.assertId(currentId, true, 1);
     Vector<String> files = new Vector<String>();
@@ -169,6 +174,7 @@ public class DeltavisionReader extends FormatReader {
   /**
    * @see loci.formats.IFormatReader#openBytes(int, byte[], int, int, int, int)
    */
+  @Override
   public byte[] openBytes(int no, byte[] buf, int x, int y, int w, int h)
     throws FormatException, IOException
   {
@@ -196,6 +202,7 @@ public class DeltavisionReader extends FormatReader {
   }
 
   /* @see loci.formats.IFormatReader#close(boolean) */
+  @Override
   public void close(boolean fileOnly) throws IOException {
     super.close(fileOnly);
     if (!fileOnly) {
@@ -229,6 +236,7 @@ public class DeltavisionReader extends FormatReader {
   // -- Internal FormatReader API methods --
 
   /* @see loci.formats.FormatReader#initFile(String) */
+  @Override
   protected void initFile(String id) throws FormatException, IOException {
     if (!checkSuffix(id, "dv")) {
       if (checkSuffix(id, "dv.log") || checkSuffix(id, "r3d.log")) {
@@ -380,8 +388,8 @@ public class DeltavisionReader extends FormatReader {
 
     ndFilters = new Double[getSizeC()];
 
-    Vector<Float> uniqueTileX = new Vector<Float>();
-    Vector<Float> uniqueTileY = new Vector<Float>();
+    final Vector<Length> uniqueTileX = new Vector<Length>();
+    final Vector<Length> uniqueTileY = new Vector<Length>();
 
     // Run through every image and fill in the
     // Extended Header information array for that image
@@ -400,17 +408,19 @@ public class DeltavisionReader extends FormatReader {
       DVExtHdrFields hdr = new DVExtHdrFields(in);
       extHdrFields[z][w][t] = hdr;
 
-      if (!uniqueTileX.contains(hdr.stageXCoord) && hdr.stageXCoord != 0) {
+      if (!uniqueTileX.contains(hdr.stageXCoord) &&
+              hdr.stageXCoord.value().floatValue() != 0) {
         uniqueTileX.add(hdr.stageXCoord);
       }
-      else if (hdr.stageXCoord == 0) {
+      else if (hdr.stageXCoord.value().floatValue() == 0) {
         hasZeroX = true;
       }
 
-      if (!uniqueTileY.contains(hdr.stageYCoord) && hdr.stageYCoord != 0) {
+      if (!uniqueTileY.contains(hdr.stageYCoord) &&
+              hdr.stageYCoord.value().floatValue() != 0) {
         uniqueTileY.add(hdr.stageYCoord);
       }
-      else if (hdr.stageYCoord == 0) {
+      else if (hdr.stageYCoord.value().floatValue() == 0) {
         hasZeroY = true;
       }
     }
@@ -428,7 +438,10 @@ public class DeltavisionReader extends FormatReader {
     }
 
     if (yTiles > 1) {
-      if (uniqueTileY.get(1) < uniqueTileY.get(0)) {
+       // TODO: use compareTo once Length implements Comparable
+      final Number y0 = uniqueTileY.get(0).value(UNITS.REFERENCEFRAME);
+      final Number y1 = uniqueTileY.get(1).value(UNITS.REFERENCEFRAME);
+      if (y1.floatValue() < y0.floatValue()) {
         backwardsStage = true;
       }
     }
@@ -683,17 +696,17 @@ public class DeltavisionReader extends FormatReader {
       }
 
       Double x = new Double(pixX);
-      PositiveFloat sizeX = FormatTools.getPhysicalSizeX(x);
+      Length sizeX = FormatTools.getPhysicalSizeX(x);
       if (sizeX != null) {
         store.setPixelsPhysicalSizeX(sizeX, series);
       }
       Double y = new Double(pixY);
-      PositiveFloat sizeY = FormatTools.getPhysicalSizeY(y);
+      Length sizeY = FormatTools.getPhysicalSizeY(y);
       if (sizeY != null) {
         store.setPixelsPhysicalSizeY(sizeY, series);
       }
       Double z = new Double(pixZ);
-      PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(z);
+      Length sizeZ = FormatTools.getPhysicalSizeZ(z);
       if (sizeZ != null) {
         store.setPixelsPhysicalSizeZ(sizeZ, series);
       }
@@ -728,24 +741,24 @@ public class DeltavisionReader extends FormatReader {
         DVExtHdrFields hdr = extHdrFields[coords[0]][coords[1]][tIndex];
 
         // plane timing
-        store.setPlaneDeltaT(new Double(hdr.timeStampSeconds), series, i);
+        store.setPlaneDeltaT(new Time(new Double(hdr.timeStampSeconds), UNITS.S), series, i);
         store.setPlaneExposureTime(
-          new Double(extHdrFields[0][coords[1]][0].expTime), series, i);
+          new Time(new Double(extHdrFields[0][coords[1]][0].expTime), UNITS.S), series, i);
 
         // stage position
         if (!logFound || getSeriesCount() > 1) {
-          store.setPlanePositionX(new Double(hdr.stageXCoord), series, i);
-          store.setPlanePositionY(new Double(hdr.stageYCoord), series, i);
-          store.setPlanePositionZ(new Double(hdr.stageZCoord), series, i);
+          store.setPlanePositionX(hdr.stageXCoord, series, i);
+          store.setPlanePositionY(hdr.stageYCoord, series, i);
+          store.setPlanePositionZ(hdr.stageZCoord, series, i);
         }
       }
 
       for (int w=0; w<getSizeC(); w++) {
         DVExtHdrFields hdrC = extHdrFields[0][w][series];
 
-        PositiveFloat emission =
+        Length emission =
           FormatTools.getEmissionWavelength(new Double(waves[w]));
-        PositiveFloat excitation =
+        Length excitation =
           FormatTools.getExcitationWavelength(new Double(hdrC.exWavelen));
 
         if (emission != null) {
@@ -1029,7 +1042,7 @@ public class DeltavisionReader extends FormatReader {
                 pixelSizes[q].trim());
             }
             if (q == 0) {
-              PositiveFloat sizeX = FormatTools.getPhysicalSizeX(size);
+              Length sizeX = FormatTools.getPhysicalSizeX(size);
               if (sizeX != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeX(sizeX, series);
@@ -1037,7 +1050,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 1) {
-              PositiveFloat sizeY = FormatTools.getPhysicalSizeY(size);
+              Length sizeY = FormatTools.getPhysicalSizeY(size);
               if (sizeY != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeY(sizeY, series);
@@ -1045,7 +1058,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 2) {
-              PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(size);
+              Length sizeZ = FormatTools.getPhysicalSizeZ(size);
               if (sizeZ != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeZ(sizeZ, series);
@@ -1094,7 +1107,8 @@ public class DeltavisionReader extends FormatReader {
             store.setDetectorID(detectorID, 0, 0);
             for (int series=0; series<getSeriesCount(); series++) {
               for (int c=0; c<getSizeC(); c++) {
-                store.setDetectorSettingsReadOutRate(mhz, series, c);
+                store.setDetectorSettingsReadOutRate(
+                        new Frequency(mhz, UNITS.HZ), series, c);
                 store.setDetectorSettingsID(detectorID, series, c);
               }
             }
@@ -1150,9 +1164,10 @@ public class DeltavisionReader extends FormatReader {
           }
           String[] coords = value.split(",");
           for (int i=0; i<coords.length; i++) {
-            Double p = null;
+            Length p = null;
             try {
-              p = new Double(coords[i].trim());
+              final Double number = Double.valueOf(coords[i]);
+              p = new Length(number, UNITS.REFERENCEFRAME);
             }
             catch (NumberFormatException e) {
               LOGGER.warn("Could not parse stage coordinate '{}'", coords[i]);
@@ -2234,7 +2249,7 @@ public class DeltavisionReader extends FormatReader {
       store.setObjectiveCalibratedMagnification(calibratedMagnification, 0, 0);
     }
     if (workingDistance != null) {
-      store.setObjectiveWorkingDistance(workingDistance * 1000, 0, 0);
+      store.setObjectiveWorkingDistance(new Length(workingDistance * 1000, UNITS.MICROM), 0, 0);
     }
   }
 
@@ -2255,13 +2270,13 @@ public class DeltavisionReader extends FormatReader {
     public float timeStampSeconds;
 
     /** X stage coordinates. */
-    public float stageXCoord;
+    public Length stageXCoord;
 
     /** Y stage coordinates. */
-    public float stageYCoord;
+    public Length stageYCoord;
 
     /** Z stage coordinates. */
-    public float stageZCoord;
+    public Length stageZCoord;
 
     /** Minimum intensity */
     public float minInten;
@@ -2309,6 +2324,7 @@ public class DeltavisionReader extends FormatReader {
      * Helper function which overrides toString, printing out the values in
      * the header section.
      */
+    @Override
     public String toString() {
       StringBuffer sb = new StringBuffer();
       sb.append("photosensorReading: ");
@@ -2346,9 +2362,9 @@ public class DeltavisionReader extends FormatReader {
         // for ImageJ (http://rsb.info.nih.gov/ij/plugins/track/delta.html)
         photosensorReading = in.readFloat();
         timeStampSeconds = in.readFloat();
-        stageXCoord = in.readFloat();
-        stageYCoord = in.readFloat();
-        stageZCoord = in.readFloat();
+        stageXCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageYCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageZCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
         minInten = in.readFloat();
         maxInten = in.readFloat();
         in.skipBytes(4);
